[gd_scene load_steps=8 format=3 uid="uid://makgt2ae88hv"]

[ext_resource type="Script" path="res://scripts/DailyAction.gd" id="1_oyqbv"]
[ext_resource type="Texture2D" uid="uid://ds6pkvmtuuwiv" path="res://assets/ui/DailyActionUI/DailyActionBorder.png" id="2_qd775"]
[ext_resource type="Texture2D" uid="uid://c5e0ba6oqm5dm" path="res://assets/ui/DailyActionUI/SpeechBubble.png" id="3_g7ihf"]
[ext_resource type="PackedScene" uid="uid://dhyb7q1k4sgv3" path="res://scenes/AvatarScene.tscn" id="3_wn5es"]
[ext_resource type="Texture2D" uid="uid://qjphkb8xnblh" path="res://assets/ui/DailyActionUI/“Get on with your jobs and keep your nose clean, gabiche!”.png" id="4_pd04s"]
[ext_resource type="PackedScene" uid="uid://cqxr34sakaos7" path="res://scenes/DailyActionTask.tscn" id="6_vgw1a"]

[sub_resource type="Theme" id="Theme_m08y2"]

[node name="DailyAction" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_m08y2")
script = ExtResource("1_oyqbv")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.270588, 0.258824, 1)

[node name="Border" type="TextureRect" parent="."]
custom_minimum_size = Vector2(690, 288)
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 856.0
offset_bottom = 386.0
texture = ExtResource("2_qd775")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(840, 370)
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 856.0
offset_bottom = 386.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HeaderPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(104, 112)
layout_mode = 2

[node name="HBoxContainer" type="Control" parent="MarginContainer/VBoxContainer/HeaderPanel"]
layout_mode = 2

[node name="AvatarViewport" type="SubViewport" parent="MarginContainer/VBoxContainer/HeaderPanel/HBoxContainer"]
transparent_bg = true

[node name="AvatarScene" parent="MarginContainer/VBoxContainer/HeaderPanel/HBoxContainer/AvatarViewport" instance=ExtResource("3_wn5es")]
custom_minimum_size = Vector2(180, 280)
offset_left = 40.0
offset_top = 50.0
offset_right = 220.0
offset_bottom = 330.0

[node name="AvatarDisplay" type="TextureRect" parent="MarginContainer/VBoxContainer/HeaderPanel/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
offset_right = 96.0
offset_bottom = 96.0

[node name="SpeechBubble" type="TextureRect" parent="MarginContainer/VBoxContainer/HeaderPanel/HBoxContainer"]
layout_mode = 2
offset_left = 86.0
offset_top = 26.0
offset_right = 248.0
offset_bottom = 102.0
texture = ExtResource("3_g7ihf")

[node name="SpeechText" type="TextureRect" parent="MarginContainer/VBoxContainer/HeaderPanel/HBoxContainer"]
layout_mode = 0
offset_left = 107.0
offset_top = 41.0
offset_right = 241.0
offset_bottom = 97.0
texture = ExtResource("4_pd04s")

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/HeaderPanel/HBoxContainer"]
layout_mode = 2
offset_left = 368.0
offset_top = -8.0
offset_right = 460.0
offset_bottom = 15.0
text = "Daily Action"

[node name="ReturnButton" type="Button" parent="MarginContainer/VBoxContainer/HeaderPanel/HBoxContainer"]
layout_mode = 0
offset_left = 760.0
offset_top = 8.0
offset_right = 821.0
offset_bottom = 39.0
text = "Return"

[node name="TasksContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(840, 250)
layout_mode = 2
theme_override_constants/separation = 8

[node name="DailyActionTask1" parent="MarginContainer/VBoxContainer/TasksContainer" instance=ExtResource("6_vgw1a")]
layout_mode = 2

[node name="DailyActionTask2" parent="MarginContainer/VBoxContainer/TasksContainer" instance=ExtResource("6_vgw1a")]
layout_mode = 2

[node name="DailyActionTask3" parent="MarginContainer/VBoxContainer/TasksContainer" instance=ExtResource("6_vgw1a")]
layout_mode = 2

[node name="DailyActionTask4" parent="MarginContainer/VBoxContainer/TasksContainer" instance=ExtResource("6_vgw1a")]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HeaderPanel/HBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
